// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:TooltipWrapper with context data 1`] = `
<body>
  <div>
    <div
      class="cxd-Page"
    >
      <div
        class="cxd-Page-content"
      >
        <div
          class="cxd-Page-main"
        >
          <div
            class="cxd-Page-body"
            role="page-body"
          >
            <div
              class="cxd-TooltipWrapper"
            >
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  body:this-is-text
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cxd-Tooltip cxd-Tooltip--light"
    offset="0,0"
    role="tooltip"
    style="left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="cxd-Tooltip-arrow"
    />
    <div
      class="cxd-Tooltip-title"
    >
      title:second-text
    </div>
    <div
      class="cxd-Tooltip-body"
    >
      <span
        class="cxd-Html"
      >
        info:this-is-text
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with offset 1`] = `
<body>
  <div>
    <div
      class="cxd-Page"
    >
      <div
        class="cxd-Page-content"
      >
        <div
          class="cxd-Page-main"
        >
          <div
            class="cxd-Page-body"
            role="page-body"
          >
            <div
              class="cxd-TooltipWrapper mb-1"
            >
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  激活文字提示
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cxd-Tooltip cxd-Tooltip--light"
    offset="19,-22"
    role="tooltip"
    style="left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="cxd-Tooltip-arrow"
    />
    <div
      class="cxd-Tooltip-body"
    >
      <span
        class="cxd-Html"
      >
        提示文字
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with showArrow 1`] = `
<body>
  <div>
    <div
      class="cxd-TooltipWrapper"
    >
      <span
        class="cxd-TplField fr-view"
      >
        <span>
          没有箭头
        </span>
      </span>
    </div>
  </div>
  <div
    class="cxd-Tooltip cxd-Tooltip--light"
    offset="0,0"
    role="tooltip"
    style="left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="cxd-Tooltip-title"
    >
      标题
    </div>
    <div
      class="cxd-Tooltip-body"
    >
      <span
        class="cxd-Html"
      >
        提示内容
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with style & tooltipStyle 1`] = `
<body>
  <div>
    <span
      class="cxd-TooltipWrapper cxd-TooltipWrapper--inline"
      style="font-style: italic;"
    >
      <span
        class="cxd-TplField fr-view"
      >
        <span>
          一段文案
        </span>
      </span>
    </span>
  </div>
  <div
    class="cxd-Tooltip cxd-Tooltip--light"
    offset="0,0"
    role="tooltip"
    style="font-weight: bold; left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="cxd-Tooltip-arrow"
    />
    <div
      class="cxd-Tooltip-body"
    >
      <span
        class="cxd-Html"
      >
        文字提示(加粗)
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with trigger & title 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-TooltipWrapper mb-1"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                hover激活文字提示
              </span>
            </span>
          </div>
          <div
            class="cxd-TooltipWrapper mb-1"
          >
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                click激活文字提示
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:TooltipWrapper with wrapperComponent 1`] = `
<body>
  <div>
    <pre
      class="cxd-TooltipWrapper"
    >
      <span
        class="cxd-TplField fr-view"
      >
        <span>
          function HelloWorld() {
    console.log('Hello World');
}
        </span>
      </span>
    </pre>
  </div>
</body>
`;
